# therapy-fill-gtm

./: README.md  pyproject.toml
crm/: crm.py  email.html
crm/psychology_today/: email_history.json  scrape_website.py
crm/psychology_today/therapist_data/: therapists_46012.json  therapists_46013.json  therapists_46014.json  therapists_46032.json
email_tracking/: Dockerfile  email_tracking.py  tracking_links.json
psychology_today/: docker-compose.yaml  scrape_description.py  selenium_scrape.py  selenium_scrape_test.py  tracking_pixels.json
psychology_today/therapist_data/: therapists_46001.json  therapists_46011.json  therapists_46016.json
psychology_today/therapist_data_test/: therapists_46001.json  therapists_46011.json
social_media/facebook/: README.md  facebook_group_monitor.py  relevant_posts.json  target_groups.json
social_media/linkedin/: agent.py  browser.py  config.yaml  configuration.py  contacts.json  controller.py  llm.py
