[tool.poetry]
name = "musical-succotash"
version = "0.1.0"
description = ""
authors = ["Collin Pfeifer <collinpfeifer@Icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
zipcodes = "^1.2.0"
requests = "^2.32.3"
selenium = "^4.27.1"
webdriver-manager = "^4.0.2"
requests-html = "^0.10.0"
beautifulsoup4 = "^4.12.3"
lxml = {extras = ["html-clean"], version = "^5.3.0"}
pyppeteer = "^2.0.0"
setuptools = "^75.6.0"
selenium-stealth = "^1.0.6"
undetected-chromedriver = "^3.5.5"
ollama = "^0.4.4"
streamlit = "^1.41.1"
watchdog = "^6.0.0"
wheel = "^0.45.1"
nltk = "^3.9.1"
googlesearch-python = "^1.2.5"
sumy = "^0.11.0"
fastapi = "^0.115.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
